cmake_minimum_required(VERSION 3.28)
project(AirPlugin)

# Add each subdirectory
add_subdirectory(AirMirval)
# add_subdirectory(TransmissivityATMParameters)
# add_subdirectory(TransmissivityBallestrin)
# add_subdirectory(TransmissivitySenguptaNREL)
# add_subdirectory(TransmissivityVantHull)
# add_subdirectory(AirVittitoeBiggs)